@@ -4,6 +4,7 @@
 ~ [#10] Improvements to component router
 ~ [#11] Route feed link module through component router
 ~ Only run the content plugin in the site application
++ [#37] Button plugin now sets content syntax as {podcast id=XX} (B/C change)
 
 11-January-2012 Michael Babker
 ~ Update Live Update to 1.1
